--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,15 @@
     transform: rotate(360deg);
   }
 }
+
+/* .calendar{
+  max-width: 280px;
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  max-width: 280px;
+  font: 100% system-ui;
+  grid-column-start: 3;
+  background: #eee;
+  text-align: center;
+  ;
+} */
